--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.volley:volley:1.1.1'
-
+    implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation  'com.google.android.gms:play-services-auth:19.0.0'
     api 'com.github.bumptech.glide:glide:4.12.0'
+    implementation platform('com.google.firebase:firebase-bom:26.6.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
   apply plugin: 'com.google.gms.google-services'
