--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Univalle20202">
-        <activity android:name=".try1"></activity>
+        <activity android:name=".FirebaseActivity"></activity>
+        <activity android:name=".try1" />
         <activity
             android:name=".ImagesList"
             android:label="@string/Memes" />
