Punto 3, Consulta a API InveSoft - Working 100%

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Univalle20202">
+        <activity android:name=".InveSoftAct"></activity>
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-2910015119031549~9812339827"/>
-        <activity android:name=".FirebaseActivity"></activity>
+            android:value="ca-app-pub-2910015119031549~9812339827" />
+
+        <activity android:name=".FirebaseActivity" />
         <activity android:name=".try1" />
         <activity
             android:name=".ImagesList"
